# SPDX-License-Identifier: GPL-2.0-only

# Man pages are only built if they are enabled at configure time.
#
# They should always be built before creating a distribution tarball.

# function which adds the source directory prefix and adds a given suffix
manaddsuffix = $(addsuffix $(1),$(addprefix $(srcdir)/,$(2)))

# List only the names without the .*.txt extension here:
MAN1_NAMES = \
	lttng \
	lttng-create \
	lttng-destroy \
	lttng-set-session \
	lttng-save \
	lttng-load \
	lttng-start \
	lttng-stop \
	lttng-version \
	lttng-view \
	lttng-enable-channel \
	lttng-disable-channel \
	lttng-add-context \
	lttng-list \
	lttng-track \
	lttng-untrack \
	lttng-status \
	lttng-help \
	lttng-snapshot \
	lttng-enable-event \
	lttng-disable-event \
	lttng-crash \
	lttng-metadata \
	lttng-regenerate \
	lttng-rotate \
	lttng-enable-rotation \
	lttng-disable-rotation \
	lttng-clear \
	lttng-add-trigger \
	lttng-remove-trigger \
	lttng-list-triggers \
	lttng-reclaim-memory
MAN3_NAMES =
MAN7_NAMES = lttng-event-rule lttng-concepts
MAN8_NAMES = lttng-sessiond lttng-relayd
MAN1_NO_ASCIIDOC_NAMES =
MAN3_NO_ASCIIDOC_NAMES = lttng-health-check
MAN7_NO_ASCIIDOC_NAMES =
MAN8_NO_ASCIIDOC_NAMES =

# AsciiDoc sources and outputs
MAN1_TXT = $(call manaddsuffix,.1.txt,$(MAN1_NAMES))
MAN3_TXT = $(call manaddsuffix,.3.txt,$(MAN3_NAMES))
MAN7_TXT = $(call manaddsuffix,.7.txt,$(MAN7_NAMES))
MAN8_TXT = $(call manaddsuffix,.8.txt,$(MAN8_NAMES))
MAN_TXT = $(MAN1_TXT) $(MAN3_TXT) $(MAN7_TXT) $(MAN8_TXT)
# XML intermediates stay flat in build dir
MAN1_XML = $(addsuffix .1.xml,$(MAN1_NAMES))
MAN3_XML = $(addsuffix .3.xml,$(MAN3_NAMES))
MAN7_XML = $(addsuffix .7.xml,$(MAN7_NAMES))
MAN8_XML = $(addsuffix .8.xml,$(MAN8_NAMES))
MAN_XML = $(MAN1_XML) $(MAN3_XML) $(MAN7_XML) $(MAN8_XML)

# common AsciiDoc source files
COMMON_TXT = \
	$(srcdir)/common-footer.txt \
	$(srcdir)/common-lttng-cmd-after-options.txt \
	$(srcdir)/common-lttng-cmd-options-head.txt \
	$(srcdir)/common-lttng-cmd-help-options.txt \
	$(srcdir)/common-help-option.txt \
	$(srcdir)/common-intro.txt \
	$(srcdir)/common-daemon-cfg.txt

# config
ASCIIDOC_CONF = $(srcdir)/asciidoc.conf
ASCIIDOC_ATTRS_CONF = $(builddir)/asciidoc-attrs.conf
XSL_FILE = $(srcdir)/manpage.xsl

# common dependencies
COMMON_DEPS = $(ASCIIDOC_CONF) $(COMMON_TXT)

# man pages destinations (in subdirectories matching install layout)
MAN1 = $(addprefix man1/,$(addsuffix .1,$(MAN1_NAMES)))
MAN3 = $(addprefix man3/,$(addsuffix .3,$(MAN3_NAMES)))
MAN7 = $(addprefix man7/,$(addsuffix .7,$(MAN7_NAMES)))
MAN8 = $(addprefix man8/,$(addsuffix .8,$(MAN8_NAMES)))
MAN1_NO_ASCIIDOC = $(addprefix man1/,$(addsuffix .1,$(MAN1_NO_ASCIIDOC_NAMES)))
MAN3_NO_ASCIIDOC = $(addprefix man3/,$(addsuffix .3,$(MAN3_NO_ASCIIDOC_NAMES)))
MAN7_NO_ASCIIDOC = $(addprefix man7/,$(addsuffix .7,$(MAN7_NO_ASCIIDOC_NAMES)))
MAN8_NO_ASCIIDOC = $(addprefix man8/,$(addsuffix .8,$(MAN8_NO_ASCIIDOC_NAMES)))
MAN = $(MAN1) $(MAN3) $(MAN7) $(MAN8)

# initially empty
CLEANFILES =

if EMBED_HELP
mantoh_verbose = $(mantoh_verbose_@AM_V@)
mantoh_verbose_ = $(mantoh_verbose_@AM_DEFAULT_V@)
mantoh_verbose_0 = @echo "  MANTOH    " $@;

MAN1_H = $(addsuffix .1.h,$(MAN1_NAMES))
MAN3_H = $(addsuffix .3.h,$(MAN3_NAMES))
MAN8_H = $(addsuffix .8.h,$(MAN8_NAMES))
MAN_H = $(MAN1_H) $(MAN3_H) $(MAN8_H)
MAN_H_RECIPE = \
	$(mantoh_verbose_0)\
	MANWIDTH=80 @MANPROG@ --encoding=UTF-8 --no-hyphenation --no-justification --local-file $< > $@ ; \
	$(SED) -i 's/\\/\\\\/g' $@ ; \
	$(SED) -i 's/"/\\"/g' $@ ; \
	$(SED) -i 's/^\(.*\)$$/"\1\\n"/' $@

%.1.h: man1/%.1
	$(MAN_H_RECIPE)

%.3.h: man3/%.3
	$(MAN_H_RECIPE)

%.8.h: man8/%.8
	$(MAN_H_RECIPE)

all-local: $(MAN_H)

CLEANFILES += $(MAN_H)
endif # EMBED_HELP

if MAN_PAGES_OPT
# at this point, we know the user asked to build the man pages
if HAVE_ASCIIDOC_XMLTO

asciidoc_verbose = $(asciidoc_verbose_@AM_V@)
asciidoc_verbose_ = $(asciidoc_verbose_@AM_DEFAULT_V@)
asciidoc_verbose_0 = @echo "  ASCIIDOC  " $@;

xmlto_verbose = $(xmlto_verbose_@AM_V@)
xmlto_verbose_ = $(xmlto_verbose_@AM_DEFAULT_V@)
xmlto_verbose_0 = @echo "  XMLTO     " $@;

# tools
ADOC = $(asciidoc_verbose)$(ASCIIDOC) -f $(ASCIIDOC_CONF) -f $(ASCIIDOC_ATTRS_CONF) -d manpage
ADOC_DOCBOOK = $(ADOC) -b docbook
XTO = $(xmlto_verbose)$(XMLTO) -m $(XSL_FILE) man

# only add this dependency if we can build the man pages because it's
# a file generated by the configure script, so it's more recent than
# the pregenerated man pages in a tarball
COMMON_DEPS += $(ASCIIDOC_ATTRS_CONF)

# recipes
%.1.xml: $(srcdir)/%.1.txt $(COMMON_DEPS)
	$(ADOC_DOCBOOK) -o $@ $<

man1/%.1: %.1.xml $(XSL_FILE)
	$(AM_V_at)$(MKDIR_P) man1
	$(XTO) -o man1 $< 2>/dev/null

%.3.xml: $(srcdir)/%.3.txt $(COMMON_DEPS)
	$(ADOC_DOCBOOK) -o $@ $<

man3/%.3: %.3.xml $(XSL_FILE)
	$(AM_V_at)$(MKDIR_P) man3
	$(XTO) -o man3 $< 2>/dev/null

%.7.xml: $(srcdir)/%.7.txt $(COMMON_DEPS)
	$(ADOC_DOCBOOK) -o $@ $<

man7/%.7: %.7.xml $(XSL_FILE)
	$(AM_V_at)$(MKDIR_P) man7
	$(XTO) -o man7 $< 2>/dev/null

%.8.xml: $(srcdir)/%.8.txt $(COMMON_DEPS)
	$(ADOC_DOCBOOK) -o $@ $<

man8/%.8: %.8.xml $(XSL_FILE)
	$(AM_V_at)$(MKDIR_P) man8
	$(XTO) -o man8 $< 2>/dev/null

# only clean the generated files if we have the tools to generate them again
CLEANFILES += $(MAN_XML) $(MAN)
else # HAVE_ASCIIDOC_XMLTO
# create man page targets used to stop the build if we want to
# build the man pages, but we don't have the necessary tools to do so
ERR_MSG = "Error: Cannot build target because asciidoc or xmlto tool is missing."
ERR_MSG += "Make sure both tools are installed and run the configure script again."

man1/%.1: $(srcdir)/%.1.txt $(COMMON_DEPS)
	@echo $(ERR_MSG)
	@false

man3/%.3: $(srcdir)/%.3.txt $(COMMON_DEPS)
	@echo $(ERR_MSG)
	@false

man7/%.7: $(srcdir)/%.7.txt $(COMMON_DEPS)
	@echo $(ERR_MSG)
	@false

man8/%.8: $(srcdir)/%.8.txt $(COMMON_DEPS)
	@echo $(ERR_MSG)
	@false
endif # HAVE_ASCIIDOC_XMLTO
endif # MAN_PAGES_OPT

# Rules to copy pre-written (non-asciidoc) man pages to subdirectories.
# These use static pattern rules to avoid conflicts with the asciidoc rules.
$(MAN1_NO_ASCIIDOC): man1/%.1: $(srcdir)/%.1
	$(AM_V_at)$(MKDIR_P) man1
	$(AM_V_GEN)cp $< $@

$(MAN3_NO_ASCIIDOC): man3/%.3: $(srcdir)/%.3
	$(AM_V_at)$(MKDIR_P) man3
	$(AM_V_GEN)cp $< $@

$(MAN7_NO_ASCIIDOC): man7/%.7: $(srcdir)/%.7
	$(AM_V_at)$(MKDIR_P) man7
	$(AM_V_GEN)cp $< $@

$(MAN8_NO_ASCIIDOC): man8/%.8: $(srcdir)/%.8
	$(AM_V_at)$(MKDIR_P) man8
	$(AM_V_GEN)cp $< $@

# those are always installed since they are directly written in troff
dist_man1_MANS = $(MAN1_NO_ASCIIDOC)
dist_man3_MANS = $(MAN3_NO_ASCIIDOC)
dist_man7_MANS = $(MAN7_NO_ASCIIDOC)
dist_man8_MANS = $(MAN8_NO_ASCIIDOC)

if MAN_PAGES_OPT
# building man pages: we can install and distribute them
dist_man1_MANS += $(MAN1)
dist_man3_MANS += $(MAN3)
dist_man7_MANS += $(MAN7)
dist_man8_MANS += $(MAN8)
endif # MAN_PAGES_OPT

if !MAN_PAGES_OPT
dist-hook:
	@echo "Error: Please enable the man pages before creating a distribution tarball."
	@false
endif # !MAN_PAGES_OPT

# Source files for pre-written man pages (not generated from asciidoc)
MAN1_NO_ASCIIDOC_SRC = $(addsuffix .1,$(MAN1_NO_ASCIIDOC_NAMES))
MAN3_NO_ASCIIDOC_SRC = $(addsuffix .3,$(MAN3_NO_ASCIIDOC_NAMES))
MAN7_NO_ASCIIDOC_SRC = $(addsuffix .7,$(MAN7_NO_ASCIIDOC_NAMES))
MAN8_NO_ASCIIDOC_SRC = $(addsuffix .8,$(MAN8_NO_ASCIIDOC_NAMES))

# always distribute the source files
EXTRA_DIST = $(MAN_TXT) $(COMMON_TXT) $(XSL_FILE) \
	$(ASCIIDOC_CONF) $(ASCIIDOC_ATTRS_CONF).in \
	$(MAN1_NO_ASCIIDOC_SRC) $(MAN3_NO_ASCIIDOC_SRC) \
	$(MAN7_NO_ASCIIDOC_SRC) $(MAN8_NO_ASCIIDOC_SRC)

# Clean generated man pages in subdirectories
CLEANFILES += $(MAN1_NO_ASCIIDOC) $(MAN3_NO_ASCIIDOC) $(MAN7_NO_ASCIIDOC) $(MAN8_NO_ASCIIDOC)

# Clean subdirectories on distclean
DISTCLEANFILES = man1/.dirstamp man3/.dirstamp man7/.dirstamp man8/.dirstamp
distclean-local:
	-rmdir man1 man3 man7 man8 2>/dev/null || true

# keep generated man pages that can be considered intermediate files
.PRECIOUS: man1/%.1 man3/%.3 man7/%.7 man8/%.8
